deployments/gateway/istio-ingressgateway-demo.yaml
# istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: httpargocd
      protocol: HTTP
    hosts:
    - "argocd.demo.kietvo.vn"
  - port:
      number: 80
      name: httpvault
      protocol: HTTP
    hosts:
    - "vault.demo.kietvo.vn"
  - port:
      number: 80
      name: httpapp
      protocol: HTTP
    hosts:
    - "demo.kietvo.vn"
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: all-traffic
  namespace: istio-ingress
spec:
  host: "*"
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
